# irssi-python

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  classes.txt  configure.in
docs/: irssi-python.html
scripts/: Makefile.am  beep_beep.py  dccmove.py  df.py  dumper.py  fork.py  hello.py  test_window.py
src/: Makefile.am  constants.awk  constants.txt  irssi.py  irssi_startup.py  pyconstants.h  pycore.c  pycore.h  pyirssi.h  pyirssi_irc.h  pyloader.c  pyloader.h  pymodule.c  pymodule.h  pysigmap.h  pysignals.c  pysignals.h  pysource.c  pysource.h  pystatusbar.c  pystatusbar.h  pythemes.c  pythemes.h  pyutils.c  pyutils.h  sig2code.awk  sig2code.txt
src/objects/: Makefile.am  ban-object.c  ban-object.h  base-objects.c  base-objects.h  channel-object.c  channel-object.h  chatnet-object.c  chatnet-object.h  command-object.c  command-object.h  connect-object.c  connect-object.h  dcc-chat-object.c  dcc-chat-object.h  dcc-get-object.c  dcc-get-object.h  dcc-object.c  dcc-object.h  dcc-send-object.c  dcc-send-object.h  factory.c  factory.h  ignore-object.c  ignore-object.h  irc-channel-object.c  irc-channel-object.h  irc-connect-object.c  irc-connect-object.h  irc-server-object.c  irc-server-object.h  log-object.c  log-object.h  logitem-object.c  logitem-object.h  main-window-object.c  main-window-object.h  netsplit-channel-object.c  netsplit-channel-object.h  netsplit-object.c  (+29 more)
