noinst_LTLIBRARIES = libobjects.la

INCLUDES = $(IRSSI_PYTHON_INCLUDES) \
		   -I$(top_srcdir)/src 

libobjects_la_SOURCES = \
	pyscript-object.c base-objects.c window-item-object.c channel-object.c \
	query-object.c server-object.c connect-object.c irc-server-object.c \
	irc-connect-object.c irc-channel-object.c ban-object.c nick-object.c \
	chatnet-object.c reconnect-object.c window-object.c textdest-object.c \
	rawlog-object.c log-object.c logitem-object.c ignore-object.c \
	dcc-object.c dcc-chat-object.c dcc-get-object.c dcc-send-object.c \
	netsplit-object.c netsplit-server-object.c netsplit-channel-object.c \
	notifylist-object.c process-object.c command-object.c theme-object.c \
	statusbar-item-object.c main-window-object.c factory.c

noinst_HEADERS = \
	ban-object.h base-objects.h channel-object.h chatnet-object.h \
	command-object.h connect-object.h dcc-chat-object.h dcc-get-object.h \
	dcc-object.h dcc-send-object.h factory.h ignore-object.h \
	irc-channel-object.h irc-connect-object.h irc-server-object.h logitem-object.h \
	log-object.h main-window-object.h netsplit-channel-object.h netsplit-object.h \
	netsplit-server-object.h nick-object.h notifylist-object.h process-object.h \
	pyscript-object.h query-object.h rawlog-object.h reconnect-object.h \
	server-object.h statusbar-item-object.h textdest-object.h theme-object.h \
	window-item-object.h window-object.h 
